# tray_manager

./: CHANGELOG.md  README-ZH.md  README.md  melos.yaml  pubspec.yaml
.github/workflows/: build.yml  lint.yml  test.yml
example/: pubspec.yaml
example/lib/: main.dart
example/lib/pages/: home.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: tray_manager.dart
lib/src/: menu_item.dart  tray_listener.dart  tray_manager.dart
linux/: CMakeLists.txt  tray_manager_plugin.cc
linux/include/tray_manager/: tray_manager_plugin.h
macos/: tray_manager.podspec
macos/Classes/: TrayIcon.swift  TrayManagerPlugin.swift  TrayMenu.swift
test/: tray_manager_test.dart
windows/: CMakeLists.txt  tray_manager_plugin.cpp
